[gd_scene load_steps=9 format=3 uid="uid://brmx4sa7xb3xq"]

[ext_resource type="Script" path="res://scripts/ui/store/store_window.gd" id="1_script"]
[ext_resource type="StyleBox" uid="uid://dt6aqtjbna86b" path="res://scenes/ui/button_style.tres" id="2_ojn43"]
[ext_resource type="Texture2D" uid="uid://cmkhyl6c8yx0p" path="res://resources/store/background.png" id="2_sig51"]
[ext_resource type="Texture2D" uid="uid://du6puo57i8na" path="res://resources/store/3112.png" id="3_3cksd"]
[ext_resource type="Texture2D" uid="uid://o3qpict4ahil" path="res://resources/exit_screen.png" id="3_5s5qr"]
[ext_resource type="PackedScene" uid="uid://duxqydn2hw6b3" path="res://scenes/ui/item_slot.tscn" id="4_r0n5c"]
[ext_resource type="PackedScene" uid="uid://bwra17qajnemg" path="res://scenes/ui/inventory.tscn" id="5_lc6bi"]

[sub_resource type="LabelSettings" id="LabelSettings_bi8hb"]
font_size = 32

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
script = ExtResource("1_script")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sig51")

[node name="StoreWindow" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 5.0
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 96
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 56

[node name="StoreLayout" type="HBoxContainer" parent="StoreWindow"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
theme_override_constants/separation = 10
alignment = 2

[node name="StoreDescription" type="PanelContainer" parent="StoreWindow/StoreLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_styles/panel = ExtResource("2_ojn43")

[node name="StoreImage" type="TextureRect" parent="StoreWindow/StoreLayout/StoreDescription"]
layout_mode = 2
texture = ExtResource("3_3cksd")
stretch_mode = 5

[node name="DescriptionLabel" type="Label" parent="StoreWindow/StoreLayout/StoreDescription"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 3
text = "Sssh! Keep your voices down, lads. We're amongst enemies here. In fact, I don't even know if I can trust you. Just buy what you need and leave."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StoreWindow/StoreLayout"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="CharacterPreview" type="PanelContainer" parent="StoreWindow/StoreLayout/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="StoreWindow/StoreLayout/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_ojn43")

[node name="MarginContainer" type="MarginContainer" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click on items to purchase:"
label_settings = SubResource("LabelSettings_bi8hb")

[node name="StoreItems" type="GridContainer" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 16
columns = 5

[node name="ItemSlot" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot2" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot3" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot4" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot5" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot6" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot7" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot8" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot9" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot10" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot11" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot12" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot13" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot14" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="ItemSlot15" parent="StoreWindow/StoreLayout/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StoreItems" instance=ExtResource("4_r0n5c")]
layout_mode = 2

[node name="Inventory" parent="StoreWindow/StoreLayout" instance=ExtResource("5_lc6bi")]
layout_mode = 2

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_bottom = 102.957
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/icon_max_width = 72
icon = ExtResource("3_5s5qr")
flat = true
icon_alignment = 1

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
